[package]
name = "auction-house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.17"
opentelemetry = "0.17.0"
clap = { version = "3.2.6", features = ["derive"] }
mpl-auction-house = "1.1.6"
anchor-lang = "0.25.0"
postgres = "0.19.3"

[dev-dependencies]
env_logger = "0.9.0"
